<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="org.example.app.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard" >
        <action
            android:id="@+id/action_dashboard_to_permissionsCenter"
            app:destination="@id/permissionsCenterFragment" />
    </fragment>

    <fragment
        android:id="@+id/insightsFragment"
        android:name="org.example.app.ui.insights.InsightsFragment"
        android:label="@string/title_insights" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="org.example.app.ui.settings.SettingsFragment"
        android:label="@string/title_settings" >
        <action
            android:id="@+id/action_settings_to_permissionsCenter"
            app:destination="@id/permissionsCenterFragment" />
    </fragment>

    <fragment
        android:id="@+id/permissionsCenterFragment"
        android:name="org.example.app.ui.permissions.PermissionsCenterFragment"
        android:label="@string/title_permissions_center" />
</navigation>
